--- a/Typora编辑的文件/c++学习/运算符重载 .md
+++ b/Typora编辑的文件/c++学习/运算符重载 .md
@@ -359,3 +359,97 @@ C++编译器至少给一个类添加4个函数
 - 默认析构函数
 - 默认拷贝构造函数
 - 赋值运算符 operatro=,对属性进行值拷贝
+
+如果有属性指向堆区, 做赋值操作时也会出现深浅拷贝的问题 
+
+```C++
+class Person {
+public: 
+    Person(int age) {
+        m_Age = new int(age); 
+    } 
+    int *m_Age;  
+
+    ~Person() {
+        if (m_Age != NULL) {
+            delete m_Age;  
+            m_Age = NULL; 
+        }
+    }
+
+}; 
+
+void test01() {
+    Person p1(18);  
+
+    Person p2(20);  
+
+    p1 = p2;  // 指向了同一块内存空间 会造成重复释放
+    cout << "p1的年龄为 " << *p1.m_Age << endl; 
+    cout << "p2的年龄为 " << *p2.m_Age << endl; 
+}  
+```
+
+在执行 p1 = p2 后, p1 和 p2 的m_Age 都指向了同一块内存空间, 会造成重复释放
+
+```C++
+    Person& operator=(Person& p) {
+        // 编译器是提供浅拷贝
+        // m_Age = p.m_Age; 
+
+        // 应该先判断是否有属性在堆区, 如果有先释放干净, 然后再深拷贝
+        if (m_Age == NULL) {
+            delete m_Age; 
+            m_Age = NULL;  
+        }  
+
+        // 深拷贝
+        m_Age = new int(*p.m_Age);  
+        return *this; 
+    }
+}; 
+```
+
+进行深拷贝解决堆区内存重复释放的问题
+
+# 重载函数调用运算符
+
+```Java
+// 函数调用运算符的重载
+class print {
+public: 
+    // 重载函数调用运算符
+    void operator()(string str) {
+        cout << str << endl; 
+    }
+};  
+
+int main() {
+    print print; 
+    print("hello world"); 
+    return 0; 
+}
+```
+
+类似于函数调用,所以又叫**仿函数**
+
+仿函数非常灵活,没有固定写法
+
+```Java
+class ADD {
+public : 
+    int operator()(int num1, int num2) {
+        return num1 + num2; 
+    }
+}; 
+
+int main() {
+
+    ADD myadd; 
+    int ret = myadd(199, 288); 
+    cout << ret << endl; 
+    // 匿名函数对象
+    cout << ADD()(100, 100) << endl;   // 200
+    return 0; 
+}
+```
