--- a/Objective C learning/标识符, 变量.md
+++ b/Objective C learning/标识符, 变量.md
@@ -58,7 +58,18 @@ NSString* s = @"hello world";
   + 基本数据类型变量
   + 指针数据类型变量
 
+## 实例变量
 
+```objective-c
+@interface Person : NSObject {
+    // 实例变量
+    int age;
+    int sex;
+}
+@end
+```
+
+**实例变量是不能赋初值的**
 
 # 程序执行过程
 
