--- a/Objective C learning/数据类型.md
+++ b/Objective C learning/数据类型.md
@@ -22,12 +22,48 @@
 + oc中浮点型常量默认为double型, 如果要声明一个常量为float, 在数字的后面加f或F
 + double m = 3.14159; // 正确  float f = 3.24f; 
 
+# Boolean
+
++ Boolean 类型指的是用于存储真值和假值的变量, 一般用于程序流程控制
++ Boolean 类型数据允许取值 true 或 false, 也可以是 0 或 非 0 的整数替代 true 和 false
+
+# BOOL类型
+
+BOOL,类型的值只有 YES 和 NO 两个值, BOOL类型的本质是signed char 类型因此可以把整数赋给BOOL变量, 它底层只占一字节(只有8位), 如果将一个较大的非零整数值赋给BOOL类型的变量 — 而这个整数的最低8位都是0, 那么系统就会把它当做NO处理
+
+## BOOL和Boolean区别
+
+> ### 1. 本质与底层实现
+>
+> - **Boolean**：是许多编程语言中的原生逻辑类型，它是一种抽象的逻辑类型，仅用于表示 “真” 和 “假” 两个状态。在不同语言中，它的底层实现不同，比如在 Java 中占 1 字节，在 C# 中占 1 字节，而在 Python 中它是单例对象，不直接对应固定的内存大小。
+> - **BOOL**：是 C/C++ 等语言中通过 typedef 定义的**别名类型**，本质是`signed char`（占 1 字节，8 位）。它不是原生的逻辑类型，只是用字符类型来模拟布尔值。
+>
+> ------
+>
+> ### 2. 取值规则
+>
+> - Boolean : 
+>   - 标准取值仅为`true`和`false`。
+>   - 在一些语言（如 C、C++）中，允许用**0 代表 false**、**非 0 整数代表 true**，但这是语言层面的隐式转换，并非类型本身的原生特性。
+> - BOOL : 
+>   - 本质是字符类型，因此可以直接赋值整数。
+>   - 取值逻辑是：**最低 8 位全为 0 时视为假（NO）**，否则视为真（YES）。例如，赋值`256`（二进制`100000000`）时，最低 8 位是 0，会被当作假。
+>
+> ------
+>
+> ### 3. 适用场景
+>
+> - **Boolean**：适用于 Java、C#、Python 等**强类型语言**，用于清晰的逻辑判断和流程控制（如`if`、`while`条件）。
+> - **BOOL**：主要用于 C/C++ 等**底层偏底层的语言**（如 macOS/iOS 的 Objective-C 开发），通过字符类型模拟布尔值，节省内存。
+>
+> ------
+>
+> ### 4. 类型安全性
+>
+> - **Boolean**：类型安全，编译器会严格检查逻辑值的使用，避免整数与逻辑值的混淆。
+> - **BOOL**：类型不安全，因为本质是字符类型，可能因整数赋值的最低 8 位为 0 而导致意外的逻辑错误（如`BOOL flag = 256;`会被判断为`NO`）。
 
 
-# Boollean
-
-+ Boollean 类型指的是用于存储真值和假值的变量, 一般用于程序流程控制
-+ Boollean 类型数据允许取值 true 或 false, 也可以是 0 或 非 0 的整数替代 true 和 false
 
 # void类型
 
@@ -50,7 +86,32 @@ id类型是oc中独有的数据类型, 它可以存储任何类型的对象, 从
 + 将number声明为id类型的变量, 如: `id number;` 
 + 格式化说明符: %p
 
+# 枚举类型
 
+```objective-c
+#import <Foundation/Foundation.h>
+//#import"person.h"
+int main(int argc, const char * argv[]) {
+    @autoreleasepool {
+        enum {male, female} me, you;
+        me = male;
+        you = 1;
+        NSLog(@"you的值: %u", you);
+        int ival = you * 2 + 12 + me;
+        NSLog(@"%d", ival);
+    }
+    return EXIT_SUCCESS;
+}
+```
+
+在 C/Objective-C 中，枚举默认从 `0` 开始编号，所以：
+
+- `male` 的值是 `0`
+- `female` 的值是 `1` 
+
+1. 定义枚举时{}中列出来的值,也被称为枚举常量或枚举元素, 这些枚举值不是变量,因此不能对它们赋值, 实际上, 每个枚举常量按它们的定义顺序, 依次为0, 1, 2, 3…以此类推, 也可以显示指定枚举常量的值
+2. 枚举常量的本质是无符号整数, 因此, 枚举值可以用来比较大小, 比较大小的规则就是它们实际的整数值
+3. 枚举常量的本质是无符号整数, 因此,objective-C允许直接将整数值赋给枚举变量, 甚至可以直接把枚举变量当成整数使用, 用它们参与四则混合运算
 
 
 
