--- a/Objective C learning/类和对象.md
+++ b/Objective C learning/类和对象.md
@@ -63,10 +63,18 @@ graph TB;
 
 ## 举例
 
-> 用@interface 来声明一个类, 冒号表示继承关系
+> 用@interface 来声明一个类, 冒号表示继承关系 
+>
+> 冒号后面的是类的父亲
+>
+> NSObject是所有类的父亲
+>
+> @end关键字结束
 
-```objective-c
-```
++ 类的声明放在“类名 + .h” 的文件中, 如: Person.h 文件
++ 类的声明主要由两部分组成: 实例变量 和 方法
++ 声明实例变量的格式: 变量类型 变量的名称  如: int age
+
 
 
 
