--- a/Objective C learning/字符串.md
+++ b/Objective C learning/字符串.md
@@ -11,3 +11,7 @@ ANSI C提供了如下常用的标准函数来处理C字符串
 + `intisupper(int ch); ` 判断ch是否为大写字符(A ~ Z), 如果是, 则返回代表真的1, 否则返回代表假的 0; 
 + `int digit(int ch); `判断ch是否为十六进制字符(0 ~ 9,或 a ~ f, 或 A ~ F), 如果是, 则返回代表真的1, 否则返回代表假的 0; 
   + `char* strcat(char* str1, char* str2); `把str2 添加到 str1 的后面, 返回追加后的字符串. 
+  + `char* strstr(char* str, int ch); `返回ch第一次在str中出现的位置; 
+  + `int strcmp(char* str1, char* str2); `比较两个字符串的大小
+  + `int tolower(int ch); `返回ch字母对应的小写字母
+  + `int toupper(int ch); `返回ch 字母对应的大写字母
