--- a/Git learning/远程仓库.md
+++ b/Git learning/远程仓库.md
@@ -16,7 +16,7 @@
 
 ## 推送到远程仓库
 
-> 命令: `git push [-f][--sh-upstream][远端名称[本地分支名]:[远端分支名]]`
+> 命令: `git push [-f][--set-upstream][远端名称[本地分支名]:[远端分支名]]`
 >
 > > 如果远程分支名和本地分支名称相同, 则可以只写本地分支
 > >
@@ -26,7 +26,7 @@
 > >
 > > `–set-upstream` 推送到远端的同时并且建立起和远端分支的关联关系 
 > >
-> > + `git push --set-upstream origin master` 
+> > + `git push --set-upstream origin master:master` 
 > >
 > > 如果当前分支已经和远端分支关联, 则可以省略分支名和远端名
 > >
